--- a/SamcefFlux/SamcefFlux.vcxproj
+++ b/SamcefFlux/SamcefFlux.vcxproj
@@ -143,7 +143,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>C:\Program Files\Siemens\NX 11.0\UGOPEN;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>libnxopencpp.lib;libnxopencpp_cae.lib;libnxopencpp_fields.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libnxopencpp.lib;libnxopencpp_cae.lib;libnxopencpp_fields.lib;libnxopencpp_assemblies.lib;libnxopencpp_features.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
